# mindora

./: README.md  app.py  pyproject.toml  test_groq.py
mindora/: chatbot.py  config.py  data.py  memory.py  models.py  tools.py
